方案頁-新增 Google 搜尋全方位網站 加強版

--- a/holkee/plan/index_amp.html
+++ b/holkee/plan/index_amp.html
@@ -99,7 +99,7 @@
             <div class="container">
                 <div class="container-top">
                     <h1>升級白金會員的好處是什麼？</h1>
-                    <h3>一鍵升級 holkee 白金會員，享有您的專屬自訂網域、網站 SSL 安全性憑證<br>永久無廣告干擾、客服優先、免費頂級虛擬主機以及更多白金專屬功能。<span style='color: #ff0000; font-size: inherit; font-weight: bold;'>額外贈送</span>微型購物網站，圓你的創業夢！</h3>
+                    <h3>一鍵升級 holkee 白金會員，享有您的專屬自訂網域、網站 SSL 安全性憑證<br>永久無廣告干擾、客服優先、免費頂級虛擬主機以及更多白金專屬功能。<span style="color: #ff0000; font-size: inherit; font-weight: bold;">額外贈送</span>微型購物網站（微電商），圓你的創業夢！</h3>
                 </div>
                 <div class="container-bottom">
                     <div class="info-block feature">
@@ -165,28 +165,27 @@
                                         </p>
                                     </li>
                                     <li>
-                                        <p>贈送網站 SSL 安全性憑證</p>
+                                        <p>移除 holkee 的品牌標誌<br><span class="font-s">（網站頁尾）</span></p>
+                                    </li>
+                                    
+                                    <li>
+                                        <p>永久無廣告干擾</p>
                                     </li>
                                     <li>
-                                        <p>移除 holkee 的品牌標誌<span class="font-s">（網站頁尾）</span></p>
+                                        <p>RWD 響應式網頁設計</p>
+                                    </li>
+                                </ul>
+                                <ul class="w50">
+                                    <li>
+                                        <p>贈送網站 SSL 安全性憑證</p>
                                     </li>
                                     <li>
                                         <p>holkee 自定義網址</p>
                                     </li>
                                     <li>
-                                        <p>永久無廣告干擾</p>
-                                    </li>
-                                </ul>
-                                <ul class="w50">
-                                    <li>
                                         <p>訪客數 / 網站流量隨時觀看</p>
                                     </li>
-                                    <li>
-                                        <p>RWD 響應式網頁設計</p>
-                                    </li>
-                                    <li>
-                                        <p>免費申請 Google 商家</p>
-                                    </li>
+                                    
                                     <li>
                                         <p>holkee 客服優先服務<span class="font-s">（VIP LINE@）</span></p>
                                     </li>
@@ -202,7 +201,7 @@
                                     </div>
                                     <ul>
                                         <li>
-                                            <p>多款白金專屬精選主題<span class="font-s">（持續更新中）</span></p>
+                                            <p>多款白金專屬精選主題<br><span class="font-s">（持續更新中）</span></p>
                                         </li>
                                         <li>
                                             <p>多款白金專屬版塊<a class="question-mark"><i class="far fa-question-circle"></i>
@@ -224,7 +223,13 @@
                                             </span></a></p>
                                         </li>
                                         <li>
-                                            <p>手機指令按鈕<a class="question-mark"><i class="far fa-question-circle"></i>
+                                            <p>串連 FB、IG 個人相簿</p>
+                                        </li>
+                                        <li>
+                                            <p>促銷輪播圖看板</p>
+                                        </li>
+                                        <li>
+                                            <p>行動裝置應用按鈕<a class="question-mark"><i class="far fa-question-circle"></i>
                                             <span class="question-note">
                                                 讓您的行動端訪客直接從手機操作，可直接撥打電話、Google Map 導航，以及發送郵件。
                                             </span></a></p>
@@ -261,13 +266,34 @@
                                             </span></a></p>
                                         </li>
                                         <li>
-                                            <p>商品搜尋</p>
+                                            <p>商品搜尋功能</p>
                                         </li>
                                         <li>
                                             <p>商品數量 / 商品分類無上限</p>
                                         </li>
                                         <li>
-                                            <p>訂單滿額折扣 / 訂單滿額免運</p>
+                                            <p>多規格多圖片</p>
+                                        </li>
+                                        <li>
+                                            <p>全館活動促銷設定<a class="question-mark"><i class="far fa-question-circle"></i>
+                                            <span class="question-note">
+                                                提供打折、折抵、免運優惠方式。
+                                            </span></a></p>
+                                        </li>
+                                        <li>
+                                            <p>優惠券設定<a class="question-mark"><i class="far fa-question-circle"></i>
+                                            <span class="question-note">
+                                                最多可設定 20 組。
+                                            </span></a></p>
+                                        </li>
+                                        <li>
+                                            <p>訂單滿額免運設定</p>
+                                        </li>
+                                        <li>
+                                            <p>自訂結帳欄位<a class="question-mark"><i class="far fa-question-circle"></i>
+                                            <span class="question-note">
+                                                最多可設定 3 組。
+                                            </span></a></p>
                                         </li>
                                         <li>
                                             <p>商品快速上下架</p>
@@ -409,6 +435,38 @@
                                     </div>
                                     <p class="text">
                                         <span class="price"><span class="original-price">NT$4,815</span>NT$3,799</span>
+                                        <span class="period">/ 365 日</span>
+                                    </p>
+                                </div>
+                                <div class="item-bottom">
+                                    <p class="btn-hollow">
+                                        <a href="#">購買</a>
+                                    </p>
+                                    <p class="text">每年自動扣繳</p>
+                                    <p class="text"><a on="tap:popup-master-info.open">收費說明</a></p>
+                                </div>
+                        </div>
+                        <div id="222222" class="item default">
+                                <div class="item-top icon-google">
+                                    <p class="title">Google 搜尋全方位網站<br>加強版</p>
+                                </div>
+                                <div class="item-middle">
+                                    <div class="additional-text">
+                                        <p>除了白金方案，您還可以享有以下加購項目：<br>
+                                            網站圖示<br>
+                                            Google 搜尋引擎收錄<br>
+                                            自動轉址設定<br>
+                                            客服連結按鈕<br>
+                                            子網域設定<br>
+                                            Facebook 商業擴充功能 (FBE) + 轉換 API<br>
+                                            <span class="font-c-skyblue">追蹤碼安裝</span><br>
+                                            <span class="font-c-skyblue">Google Analytics（分析）</span><br>
+                                            <span class="font-c-skyblue">多語言選單</span><br>
+                                            <span class="font-c-skyblue">Google 品牌關鍵字推廣</span>
+                                        </p>
+                                    </div>
+                                    <p class="text">
+                                        <span class="price"><span class="original-price">NT$18,243</span>NT$13,888</span>
                                         <span class="period">/ 365 日</span>
                                     </p>
                                 </div>
