CRM - 新增修改 聯絡人 地址寬度
p 新增 add

--- a/CRM/order.html
+++ b/CRM/order.html
@@ -792,7 +792,7 @@
                                         <li>
                                             <p class="name name-pay">張小姐(財務)</p>
                                             <div class="info clearfix">
-                                                <p>
+                                                <p class="add">
                                                     <span>地址</span>
                                                     <span>104台北市中山區南京東路三段63號5樓</span>
                                                 </p>
@@ -1382,7 +1382,7 @@
                                     <li>
                                         <p class="name name-pay">張小姐(財務)</p>
                                         <div class="info clearfix">
-                                            <p>
+                                            <p class="add">
                                                 <span>地址</span>
                                                 <span>104台北市中山區南京東路三段63號5樓</span>
                                             </p>
