紅利桃子 - 更新連結與內容

--- a/iiot/peach/business.html
+++ b/iiot/peach/business.html
@@ -4,12 +4,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0, user-scalable=no">
     <title>紅利桃子 | 業者專區 － 商家振興、民眾有感！千萬紅利桃子加倍贈，振興活動一波波持續到年底</title>
-    <meta name='description'content="資科局全新打造、預計於年底上線的「市民卡紅利桃子」，運用點數發放模式，達到市政宣導、民眾有感、商家振興的目標，為加強振興力道將於7月15日搶先以Beta版本推出，結合各局處活動送出千萬元台幣的巨額點數，民眾獲點後可以直接至桃園在地特約商家折抵消費（1元=1點），取得生活小確幸；商家則能將獲得的點數變現，取得最實質的收益。" />
+    <meta name='description'content="桃園市政府資科局全新打造、預計於年底上線的「市民卡紅利桃子」，運用點數發放模式，達到市政宣導、民眾有感、商家振興的目標。為加強振興力道將於7月15日提早搶先推出，結合各局處活動送出千萬元台幣等值的巨額點數，民眾獲點後可以直接到桃園在地特約商家折抵消費（1元=1點），增加生活小確幸；而商家可將獲得的點數變現，提升實質收益。" />
     <meta name='keywords' content="數位桃園, 數位振興, 商家振興, 市民卡, 紅利桃子, 桃園市民, TTPUSH, 點數特約商店" />
     <meta property="og:image" content="images/share-pic.png" />
-    <meta property="og:title" content="紅利桃子 | 業者專區 － 商家振興、民眾有感！千萬紅利桃子加倍贈，振興活動一波波持續到年底" />
+    <meta property="og:title" content="紅利桃子－商家振興、民眾有感！千萬紅利桃子加倍贈，振興活動一波波持續到年底" />
     <meta property="og:url" content="#" />
-    <meta property="og:description" content="資科局全新打造、預計於年底上線的「市民卡紅利桃子」，運用點數發放模式，達到市政宣導、民眾有感、商家振興的目標，為加強振興力道將於7月15日搶先以Beta版本推出，結合各局處活動送出千萬元台幣的巨額點數，民眾獲點後可以直接至桃園在地特約商家折抵消費（1元=1點），取得生活小確幸；商家則能將獲得的點數變現，取得最實質的收益。" />
+    <meta property="og:description" content="桃園市政府資科局全新打造、預計於年底上線的「市民卡紅利桃子」，運用點數發放模式，達到市政宣導、民眾有感、商家振興的目標。為加強振興力道將於7月15日提早搶先推出，結合各局處活動送出千萬元台幣等值的巨額點數，民眾獲點後可以直接到桃園在地特約商家折抵消費（1元=1點），增加生活小確幸；而商家可將獲得的點數變現，提升實質收益。" />
     <meta property="og:type" content="website" />
     <link rel="apple-touch-icon" sizes="57x57" href="https://taoyuan1000.tycg.gov.tw/images/icons/apple-icon-57x57.png">
     <link rel="apple-touch-icon" sizes="60x60" href="https://taoyuan1000.tycg.gov.tw/images/icons/apple-icon-60x60.png">
@@ -80,7 +80,7 @@
                 <section class="event-content" id="goThe01">
                     <div class="info" style="padding-bottom: 40px;">
                         <div class="slider-banner">
-                            <a href="https://docs.google.com/forms/d/e/1FAIpQLScqd69r4Yk4Qv5sQEsRZEGzPku2HbDZ4FsDbFFvHxF0-zLODA/viewform"
+                            <a href="https://lihi3.com/psG7v"
                                 target="_blank">
                                 <img width="100%" src="images/btn-join-business.png" alt="「點數特約商家」招募中 （立即點我申請加入）">
                             </a>
@@ -124,13 +124,13 @@
                                 <h5>相關連結</h5>
                                 <ul class="clearfix">
                                     <li>
-                                        <a href="https://doit.tycg.gov.tw/" target="_blank">
-                                            <img src="images/Logo-Taoyuan-doit.png" alt="桃園市政府資訊科技局">
+                                        <a href="https://www.tycg.gov.tw/ch/" target="_blank">
+                                            <img src="images/Logo-Taoyuan-Black.png" alt="桃園市政府">
                                         </a>
                                     </li>
                                     <li>
-                                        <a href="https://www.tycg.gov.tw/ch/" target="_blank">
-                                            <img src="images/Logo-Taoyuan-Black.png" alt="桃園市政府">
+                                        <a href="https://doit.tycg.gov.tw/" target="_blank">
+                                            <img src="images/Logo-Taoyuan-doit.png" alt="桃園市政府資訊科技局">
                                         </a>
                                     </li>
                                 </ul>
