紅利桃子 - 修改與新增內容

--- a/iiot/peach/business.html
+++ b/iiot/peach/business.html
@@ -6,7 +6,7 @@
     <title>紅利桃子 | 業者專區 － 商家振興、民眾有感！千萬紅利桃子加倍贈，振興活動一波波持續到年底</title>
     <meta name='description'content="桃園市政府資科局全新打造、預計於年底上線的「市民卡紅利桃子」，運用點數發放模式，達到市政宣導、民眾有感、商家振興的目標。為加強振興力道將於7月15日提早搶先推出，結合各局處活動送出千萬元台幣等值的巨額點數，民眾獲點後可以直接到桃園在地特約商家折抵消費（1元=1點），增加生活小確幸；而商家可將獲得的點數變現，提升實質收益。" />
     <meta name='keywords' content="數位桃園, 數位振興, 商家振興, 市民卡, 紅利桃子, 桃園市民, TTPUSH, 點數特約商店" />
-    <meta property="og:image" content="images/share-pic.png" />
+    <meta property="og:image" content="images/share-pic-0629.png" />
     <meta property="og:title" content="紅利桃子－商家振興、民眾有感！千萬紅利桃子加倍贈，振興活動一波波持續到年底" />
     <meta property="og:url" content="#" />
     <meta property="og:description" content="桃園市政府資科局全新打造、預計於年底上線的「市民卡紅利桃子」，運用點數發放模式，達到市政宣導、民眾有感、商家振興的目標。為加強振興力道將於7月15日提早搶先推出，結合各局處活動送出千萬元台幣等值的巨額點數，民眾獲點後可以直接到桃園在地特約商家折抵消費（1元=1點），增加生活小確幸；而商家可將獲得的點數變現，提升實質收益。" />
@@ -47,7 +47,25 @@
                     <a href="index.html">回首頁</a>
                 </li>
                 <li class="pushy-link">
-                    <a href="/app/register">會員登入/註冊</a>
+                    <a class="go-section-01">最新消息</a>
+                </li>
+                <li class="pushy-link">
+                    <a class="go-section-02">活動辦法</a>
+                </li>
+                <li class="pushy-link">
+                    <a class="go-section-03">民眾專區</a>
+                </li>
+                <li class="pushy-link">
+                    <a href="business.html">業者專區</a>
+                </li>
+                <li class="pushy-link">
+                    <a href="faq.html">常見問題</a>
+                </li>
+                <li class="pushy-link">
+                    <a href="/app/privacy">隱私權及安全政策</a>
+                </li>
+                <li class="pushy-link">
+                    <a href="https://lihi3.com/BYXkv">前往紅利桃子</a>
                 </li>
             </ul>
         </div>
@@ -58,13 +76,17 @@
         <!-- header -->
         <header class="header-container clearfix">
             <button class="menu-btn"><span><i class="fas fa-bars"></i></span></button>
-            <a class="logo" href="index.html" target="_blank">
+            <a class="logo" href="index.html">
                 <h2>紅利桃子</h2>
             </a>
             <nav class="nav-menu">
                 <ul>
-                    <li><a href="index.html">回首頁</a></li>
-                    <li><a href="/app/register">會員登入/註冊</a></li>
+                    <li>
+                        <a href="index.html">回首頁</a>
+                    </li>
+                    <li>
+                        <a href="https://lihi3.com/BYXkv">前往紅利桃子</a>
+                    </li>
                 </ul>
             </nav>
         </header>
@@ -73,7 +95,7 @@
                 <section class="content">
                     <div class="main-title clearfix">
                         <div class="i-a">
-                            <img src="images/main-banner.png" title="桃園市民卡－千萬紅利桃子加倍贈" width="100%">
+                            <img src="images/main-banner-0629.png" title="桃園市民卡－千萬紅利桃子加倍贈" width="100%">
                         </div>
                     </div>
                 </section>
@@ -82,7 +104,7 @@
                         <div class="slider-banner">
                             <a href="https://lihi3.com/psG7v"
                                 target="_blank">
-                                <img width="100%" src="images/btn-join-business.png" alt="「點數特約商家」招募中 （立即點我申請加入）">
+                                <img width="100%" src="images/btn-join-business.png" alt="加入「點數特約商家」 （立即點我申請加入）">
                             </a>
                         </div>
                     </div>
@@ -104,13 +126,13 @@
                                 <span class="bg-pink">如何加入、申請成為點數特約店家？</span>
                             </h3>
                             <div>
-                                <img src="images/img-join-business-01.jpg" width="100%">
+                                <img src="images/0629/img-join-business-01.jpg" width="100%">
                             </div>
                             <div style="padding-top:10px;">
-                                <img src="images/img-join-business-02.jpg" width="100%">
+                                <img src="images/0629/img-join-business-02.jpg" width="100%">
                             </div>
                             <div style="padding-top:10px;">
-                                <img src="images/img-join-business-03.jpg" width="100%">
+                                <img src="images/0629/img-join-business-03.jpg" width="100%">
                             </div>
                         </div>
                     </div>
