--- a/iiot/peach/faq.html
+++ b/iiot/peach/faq.html
@@ -3,11 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0, user-scalable=no">
-    <title>紅利桃子 | 民眾專區 － 商家振興、民眾有感！千萬紅利桃子加倍贈，振興活動一波波持續到年底</title>
+    <title>紅利桃子 | 常見問題 － 商家振興、民眾有感！千萬紅利桃子加倍贈，振興活動一波波持續到年底</title>
     <meta name='description'content="桃園市政府資科局全新打造、預計於年底上線的「市民卡紅利桃子」，運用點數發放模式，達到市政宣導、民眾有感、商家振興的目標。為加強振興力道將於7月15日提早搶先推出，結合各局處活動送出千萬元台幣等值的巨額點數，民眾獲點後可以直接到桃園在地特約商家折抵消費（1元=1點），增加生活小確幸；而商家可將獲得的點數變現，提升實質收益。" />
     <meta name='keywords' content="數位桃園, 數位振興, 商家振興, 市民卡, 紅利桃子, 桃園市民, TTPUSH, 點數特約商店" />
     <meta property="og:image" content="images/share-pic-0629.png" />
-    <meta property="og:title" content="紅利桃子－商家振興、民眾有感！千萬紅利桃子加倍贈，振興活動一波波持續到年底" />
+    <meta property="og:title" content="紅利桃子 | 常見問題－商家振興、民眾有感！千萬紅利桃子加倍贈，振興活動一波波持續到年底" />
     <meta property="og:url" content="#" />
     <meta property="og:description" content="桃園市政府資科局全新打造、預計於年底上線的「市民卡紅利桃子」，運用點數發放模式，達到市政宣導、民眾有感、商家振興的目標。為加強振興力道將於7月15日提早搶先推出，結合各局處活動送出千萬元台幣等值的巨額點數，民眾獲點後可以直接到桃園在地特約商家折抵消費（1元=1點），增加生活小確幸；而商家可將獲得的點數變現，提升實質收益。" />
     <meta property="og:type" content="website" />
@@ -99,68 +99,62 @@
                         </div>
                     </div>
                 </section>
-                <section class="event-content" id="goThe01">
-                    <div class="info" style="padding-bottom: 40px;">
-                        <div class="slider-banner">
-                            <a href="https://lihi3.com/BYXkv"
-                                target="_blank">
-                                <img width="100%" src="images/btn-join.png" alt="加入紅利桃子 （掃描QRcode或點我加入）">
-                            </a>
-                        </div>
-                    </div>
+                <section class="event-content">
                     <div class="card" id="link01">
-                        <h3 class="sub-title">
-                            <span class="bg-pink">如何加入紅利桃子？</span>
-                        </h3>
-                        <div>
-                            <img src="images/0629/img-join-01.jpg" width="100%" alt="加入紅利桃子 - 使用手機號碼註冊">
-                        </div>
-                        <div style="padding-top:10px;">
-                            <img src="images/0629/img-join-02.jpg" width="100%" alt="加入紅利桃子 - 使用LINE連動註冊">   
-                        </div>
-                        <div style="padding-top:10px;">
-                            <img src="images/0629/img-join-03.jpg" width="100%" alt="無法使用LINE自動登入或忘記LINE帳號密碼">
-                        </div>
-                    </div>
-                    <div class="card" id="link02">
-                        <h3 class="sub-title">
-                            <span class="bg-pink">全民攻略 - 紅利桃子怎麼拿？</span>
-                        </h3>
-                        <div>
-                            <img src="images/img-join-03.jpg" width="100%" alt="紅利桃子怎麼拿？">
-                        </div>
-                        <div class="info">
-                            <h5>民眾可透過以下各種多元管道取得紅利桃子：</h5>
-                            <ul class="list">
-                                <li>
-                                    <p><span>問答給獎勵：</span>加入紅利桃子完成問答任務即享 50 點。</p>
-                                </li>
-                                <li>
-                                    <p><span>消費回饋任務：</span>到點數特約商店使用 50 點以上，系統立即回饋點數 50 點。每人可到不重複的 2 個點數特約商店消費，最高可回饋2次，累計 100 點。</p>
-                                </li>
-                                <li>
-                                    <p><span class="blue">加碼經發局活動：</span>參加桃園市經發局「你吃飯我買單2.0」，依照得獎者金額數字，資科局提供加倍紅利桃子。（經發局活動辦法詳見該活動官網）</p>
-                                </li>
-                                <li>
-                                    <p><span class="blue">加碼觀旅局活動：</span>參加桃園市觀旅局「桃園千元住宿金搶先用」，依照得獎者金額數字，資科局提供 1,000 點紅利桃子。（觀旅局活動辦法詳見該活動官網）</p>
-                                </li>
-                                <li>
-                                    <p><span class="blue">加碼農業局活動：</span>參加桃園市農業局「111年桃園市防疫有機蔬菜箱」，依照實際付款採購者之意願登記報名，資科局提供 30 點紅利桃子。（農業局活動辦法詳見該活動官網）</p>
-                                </li>
-                            </ul>
+                         <div class="main-introductio">
+                            <h3 class="sub-title">
+                                <span class="bg-pink">將紅利桃子加到手機主畫面</span>
+                            </h3>
+                            <div>
+                                <img src="images/img-faq-a-01.jpg" width="100%">
+                            </div>
+                            <div style="padding-top:10px;">
+                                <img src="images/img-faq-a-02.jpg" width="100%">
+                            </div>
                         </div>
                     </div>
-                    <div class="card" id="link03">
-                        <h3 class="sub-title">
-                            <span class="bg-pink">紅利桃子怎麼花？</span>
-                        </h3>
-                        <div>
-                            <img src="images/0629/img-join-04.jpg" width="100%" alt="紅利桃子怎麼花？ - 點數特約店家查詢">
-                        </div>
-                        <div style="padding-top:10px;">
-                            <img src="images/0629/img-join-05.jpg" width="100%" alt="紅利桃子怎麼花？ - 點數特約店家消費">
+                    <div class="card">
+                        <div class="main-introductio">
+                            <h3 class="sub-title">
+                                <span class="bg-pink">允許取用相機</span>
+                            </h3>
+                            <div>
+                                <img src="images/img-faq-b-01.jpg" width="100%">
+                            </div>
+                            <div style="padding-top:10px;">
+                                <img src="images/img-faq-b-02.jpg" width="100%">
+                            </div>
+                            <div style="padding-top:10px;">
+                                <img src="images/img-faq-b-03.jpg" width="100%">
+                            </div>
                         </div>
                     </div>
+                    <div class="card">
+                        <div class="main-introductio">
+                            <h3 class="sub-title">
+                                <span class="bg-pink">無法取得有異常</span>
+                            </h3>
+                            <div>
+                                <img src="images/img-faq-c-01.jpg" width="100%">
+                            </div>
+                            <div style="padding-top:10px;">
+                                <img src="images/img-faq-c-02.jpg" width="100%">
+                            </div>
+                            <div style="padding-top:10px;">
+                                <img src="images/img-faq-c-03.jpg" width="100%">
+                            </div>
+                            <div style="padding-top:10px;">
+                                <img src="images/img-faq-c-04.jpg" width="100%">
+                            </div>
+                            <div style="padding-top:10px;">
+                                <img src="images/img-faq-c-05.jpg" width="100%">
+                            </div>
+                            <div style="padding-top:10px;">
+                                <img src="images/img-faq-c-06.jpg" width="100%">
+                            </div>
+                        </div>
+                    </div>
+
                     <div class="card">
                         <h3 class="sub-title">
                             <span class="bg-pink">相關連結與合作夥伴</span>
