--- a/iiot/peach/index.html
+++ b/iiot/peach/index.html
@@ -6,7 +6,7 @@
     <title>紅利桃子－商家振興、民眾有感！千萬紅利桃子加倍贈，振興活動一波波持續到年底</title>
     <meta name='description'content="桃園市政府資科局全新打造、預計於年底上線的「市民卡紅利桃子」，運用點數發放模式，達到市政宣導、民眾有感、商家振興的目標。為加強振興力道將於7月15日提早搶先推出，結合各局處活動送出千萬元台幣等值的巨額點數，民眾獲點後可以直接到桃園在地特約商家折抵消費（1元=1點），增加生活小確幸；而商家可將獲得的點數變現，提升實質收益。" />
     <meta name='keywords' content="數位桃園, 數位振興, 商家振興, 市民卡, 紅利桃子, 桃園市民, TTPUSH, 點數特約商店" />
-    <meta property="og:image" content="images/share-pic.png" />
+    <meta property="og:image" content="images/share-pic-0629.png" />
     <meta property="og:title" content="紅利桃子－商家振興、民眾有感！千萬紅利桃子加倍贈，振興活動一波波持續到年底" />
     <meta property="og:url" content="#" />
     <meta property="og:description" content="桃園市政府資科局全新打造、預計於年底上線的「市民卡紅利桃子」，運用點數發放模式，達到市政宣導、民眾有感、商家振興的目標。為加強振興力道將於7月15日提早搶先推出，結合各局處活動送出千萬元台幣等值的巨額點數，民眾獲點後可以直接到桃園在地特約商家折抵消費（1元=1點），增加生活小確幸；而商家可將獲得的點數變現，提升實質收益。" />
@@ -55,10 +55,13 @@
                     <a href="business.html">業者專區</a>
                 </li>
                 <li class="pushy-link">
+                    <a href="faq.html">常見問題</a>
+                </li>
+                <li class="pushy-link">
                     <a href="/app/privacy">隱私權及安全政策</a>
                 </li>
                 <li class="pushy-link">
-                    <a href="/app/register">會員登入/註冊</a>
+                    <a href="https://lihi3.com/BYXkv">前往紅利桃子</a>
                 </li>
             </ul>
         </div>
@@ -69,7 +72,7 @@
         <!-- header -->
         <header class="header-container clearfix">
             <button class="menu-btn"><span><i class="fas fa-bars"></i></span></button>
-            <a class="logo" href="index.html" target="_blank">
+            <a class="logo" href="index.html">
                 <h2>紅利桃子</h2>
             </a>
             <nav class="nav-menu">
@@ -100,13 +103,12 @@
                             </li> -->
                         </ul>
                     </li>
-                    <!-- <li class="go-section-04">
-                        <a>常見問題</a>
-                    </li> -->
                     <li>
-                        <a href="/app/register">會員註冊/登入</a>
+                        <a href="faq.html">常見問題</a>
                     </li>
-
+                    <li>
+                        <a href="https://lihi3.com/BYXkv">前往紅利桃子</a>
+                    </li>
                 </ul>
             </nav>
         </header>
@@ -115,7 +117,7 @@
                 <section class="content">
                     <div class="main-title clearfix">
                         <div class="i-a">
-                            <img src="images/main-banner.png" title="桃園市民卡－千萬紅利桃子加倍贈" width="100%">
+                            <img src="images/main-banner-0629.png" title="桃園市民卡－千萬紅利桃子加倍贈" width="100%">
                         </div>
                     </div>
                 </section>
@@ -144,7 +146,7 @@
                     
                     <div class="card" id="goThe03">
                         <h3 class="sub-title">
-                            <span class="bg-pink">紅利桃子是什麼?</span>
+                            <span class="bg-pink">全民攻略 - 紅利桃子是什麼？</span>
                         </h3>
                         <div class="info">
                             <div class="how-box">
@@ -170,7 +172,19 @@
                         <h3 class="sub-title">
                             <span class="bg-pink">桃園市各局處活動辦法</span>
                         </h3>
-                        <h4 class="hot-title">coming soon...</h4>
+                        <ul class="tycg-card clearfix">
+                            <li>
+                                <a class="tycg-photo" href="https://lovetystay.tycg.gov.tw/" target="_blank">
+                                    <img src="images/img-event-01.png" alt="觀旅局">
+                                </a>
+                            </li>
+                            <li>
+                                <a class="tycg-photo" href="https://agriculture.tycg.gov.tw/home.jsp?id=255&parentpath=0,103&mcustomize=multimessage_view.jsp&dataserno=202206270024&aplistdn=ou=hotnews,ou=chinese,ou=ap_root,o=tycg,c=tw&toolsflag=Y" target="_blank">
+                                    <img src="images/img-event-02.png" alt="農業局">
+                                </a>
+                            </li>
+                        </ul>
+                        <p class="text-remark">※ 以上活動辦法依各局處活動官網為準。</p>
                     </div>
 
                     <div class="card">
