CRM - 調整"主管審核標籤"樣式
1. 專案備註統一與編輯時一樣。
2. 調整主管審核委刊單狀態：
黃底 → 待審核 ;
綠底 → 同意 ;
紅底 → 不同意。

--- a/CRM/order.html
+++ b/CRM/order.html
@@ -192,8 +192,8 @@
                     </div>
                     <div class="card clearfix">
                         <a class="go-detail popup-link" href="#popup-order-info">
-                            <!-- 需主管同意 label -->
-                            <p class="label-audit">需主管同意</p>
+                            <!-- 主管審核拒絕 + audit-reject -->
+                            <p class="label-audit audit-reject">主管拒絕</p>
                             <h4 class="order-name step-one">雙影創藝有限公司 - 陳啟中(粉粉)</h4>
                             <p class="product-valid-period order-time">
                                 <span class="calendar">
@@ -239,6 +239,8 @@
                     </div>
                     <div class="card clearfix">
                         <a class="go-detail popup-link">
+                            <!-- 需主管審核 label -->
+                            <p class="label-audit">需主管審核</p>
                             <h4 class="order-name step-three">高筱蘋 - 高筱蘋</h4>
                             <p class="product-valid-period order-time">
                                 <span class="calendar">
@@ -284,8 +286,8 @@
                     </div>
                     <div class="card clearfix">
                         <a class="go-detail popup-link">
-                            <!-- 需主管同意 label -->
-                            <p class="label-audit">需主管同意</p>
+                            <!-- 主管審核通過 + audit-agree -->
+                            <p class="label-audit audit-agree ">主管通過</p>
                             <h4 class="order-name step-two">菁品創意事業有限公司意事業有限公司 - 黃素菁</h4>
                             <p class="product-valid-period order-time">
                                 <span class="calendar">
