--- a/iiot/peach/index.html
+++ b/iiot/peach/index.html
@@ -167,7 +167,16 @@
                             </div>
                         </div>
                     </div>
-                    
+
+                    <div class="card">
+                        <div>
+                            <a class="a-an" href="https://lihi3.com/BYXkv" target="_blank">
+                                <img class="pc-show" src="images/img-event-hot.jpg" width="100%" alt="紅利桃子 - 加碼活動">
+                                <img class="mob-show" src="images/img-event-hot-mob.jpg" width="100%" alt="紅利桃子 - 加碼活動">
+                            </a>
+                        </div>
+                    </div>
+
                     <div class="card" id="goThe02">
                         <h3 class="sub-title">
                             <span class="bg-pink">桃園市各局處活動辦法</span>
@@ -180,7 +189,7 @@
                             </li>
                             <li>
                                 <a class="tycg-photo" href="https://agriculture.tycg.gov.tw/home.jsp?id=255&parentpath=0,103&mcustomize=multimessage_view.jsp&dataserno=202206270024&aplistdn=ou=hotnews,ou=chinese,ou=ap_root,o=tycg,c=tw&toolsflag=Y" target="_blank">
-                                    <img src="images/img-event-02.png" alt="農業局">
+                                    <img src="images/img-event-02-0701.png" alt="農業局">
                                 </a>
                             </li>
                         </ul>
